--- a/roboshop/Makefile
+++ b/roboshop/Makefile
@@ -1,11 +1,11 @@
 help:
-	@printf "\033[32mRoboShop Shell Scripting v$(version)\033[0m\n\n"
+	@printf "\033[32mRoboShop Shell Scripting Make Options$(version)\033[0m\n\n"
     @grep -E '^[a-zA-Z_-]+:.*?## .*$$' $(MAKEFILE_LIST) | sort | awk 'BEGIN {FS = ":.*?## "}; {printf "\033[36m%-30s\033[0m %s\n", $$1, $$2}'
 common:
 	@sh components/common.sh
-cart: common
+cart: common ## Install Cart Component
 	@sh components/cart.sh
-catalogue: common
+catalogue: common ## Install Catalogue Component
 	@sh components/catalogue.sh
-frontend: common
+frontend: common ## Install Frontend Component
 	@sh components/frontend.sh
