--- a/roboshop/Makefile
+++ b/roboshop/Makefile
@@ -3,9 +3,10 @@ help:
     @grep -E '^[a-zA-Z_-]+:.*?## .*$$' $(MAKEFILE_LIST) | sort | awk 'BEGIN {FS = ":.*?## "}; {printf "\033[36m%-30s\033[0m %s\n", $$1, $$2}'
 common:
 	@sh components/common.sh
-cart: common ## Install Cart Component
+cart: common ##Install Cart Component
 	@sh components/cart.sh
-catalogue: common ## Install Catalogue Component
+catalogue: common ##Install Catalogue Component
 	@sh components/catalogue.sh
-frontend: common ## Install Frontend Component
+.PHONY: frontend
+frontend: common ##Install Frontend Component
 	@sh components/frontend.sh
