--- a/roboshop/Makefile
+++ b/roboshop/Makefile
@@ -15,3 +15,7 @@ catalogue:			## Install Catalogue Component
 frontend: common
 frontend:			## Install Frontend Component
 	@sh components/frontend.sh
+
+mongodb: common
+mongodb:			## Install Frontend Component
+	@sh components/mongodb.sh
